# OpenGLEngine-Android

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/xuwen/openglengine/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/shader/3dmodel/: 3dmodelshaderf.glsl  3dmodelshaderv.glsl
app/src/main/assets/shader/avata1/: avata1_f.glsl  avata1_v.glsl
app/src/main/assets/shader/avata2/: avata2_f.glsl  avata2_v.glsl
app/src/main/assets/shader/camera/: camera_filter_10_f.glsl  camera_filter_11_f.glsl  camera_filter_12_f.glsl  camera_filter_1_f.glsl  camera_filter_2_f.glsl  camera_filter_3_f.glsl  camera_filter_4_f.glsl  camera_filter_5_f.glsl  camera_filter_6_f.glsl  camera_filter_7_f.glsl  camera_filter_8_f.glsl  camera_filter_9_f.glsl  camerav.glsl
app/src/main/assets/shader/cube/: cubef.glsl  cubev.glsl
app/src/main/assets/shader/fbo/: sampletexturef.glsl
app/src/main/assets/shader/greenscreen/: greenScreenf_1.glsl  greenScreenf_2.glsl  greenScreenv.glsl
app/src/main/assets/shader/mesh/: objloaderf.glsl  objloaderv.glsl
app/src/main/assets/shader/sticker/: stickerf.glsl  stickerv.glsl
app/src/main/assets/shader/texture2D/: texture2Df.glsl
app/src/main/assets/shader/transition/: transitionf_1.glsl  transitionf_2.glsl  transitionf_3.glsl  transitionf_4.glsl  transitionf_5.glsl  transitionf_6.glsl  transitionf_7.glsl  transitionf_8.glsl  transitionf_9.glsl  transitionv.glsl
app/src/main/cpp/: CMakeLists.txt  jni-lib.cpp
app/src/main/cpp/sample/: GLBaseSample.h  GLBaseSampleType.h
app/src/main/cpp/sample/3DAnimSample/: Model3DAnimSample.cpp  Model3DAnimSample.h
app/src/main/cpp/sample/3DModel/: GL3DModel.cpp  GL3DModel.h
app/src/main/cpp/sample/3DSample/: Model3DSample.cpp  Model3DSample.h
app/src/main/cpp/sample/camera/: CCGLCamera2D.cpp  CCGLCamera2D.h
app/src/main/cpp/sample/greenscreen/: CCGreenScreenTexture.cpp  CCGreenScreenTexture.h
app/src/main/cpp/sample/scene/: CCGLScene.cpp  CCGLScene.h
app/src/main/cpp/sample/scene/camera/: CCGLCamera.cpp  CCGLCamera.h
app/src/main/cpp/sample/scene/primitives/cube/: CCTextureCube.cpp  CCTextureCube.h
app/src/main/cpp/sample/scene/primitives/fbotexture/: CCTextureRender.cpp  CCTextureRender.h
app/src/main/cpp/sample/scene/primitives/mesh/: CCMesh.cpp  CCMesh.h  CCModelLoader.cpp  CCModelLoader.h
app/src/main/cpp/sample/scene/primitives/sticker/: CCGLSticker.cpp  CCGLSticker.h
app/src/main/cpp/sample/scene/video/: CCGLVideoRender.cpp  CCGLVideoRender.h
app/src/main/cpp/sample/texture2d/: CCSampleTexture2D.cpp  CCSampleTexture2D.h  CCSampleTexture2DScale.cpp  CCSampleTexture2DScale.h
app/src/main/cpp/sample/transtions/: CCTranstionTexture.cpp  CCTranstionTexture.h
app/src/main/cpp/util/: GLUtils.cpp  GLUtils.h
app/src/main/cpp/util/common/: CCNDKCommonDef.h  CCYUVDataDefine.h
app/src/main/cpp/util/ffmpeg/audiodecoder/: AudioDecoder.cpp  AudioDecoder.h
app/src/main/cpp/util/ffmpeg/videodecoder/: VideoDecoder.cpp  VideoDecoder.h
app/src/main/cpp/util/ffmpeg/videowriter/: CCVideoWriter.cpp  CCVideoWriter.h
app/src/main/cpp/util/image/: CCImage.cpp  CCImage.h
app/src/main/cpp/util/opengl/buffer/: CCOpenGLBuffer.cpp  CCOpenGLBuffer.h  CCOpenGLFBO.cpp  CCOpenGLFBO.h
app/src/main/cpp/util/opengl/shader/: CCOpenGLShader.cpp  CCOpenGLShader.h
app/src/main/cpp/util/opengl/texture/: CCOpenGLTexture.cpp  CCOpenGLTexture.h
app/src/main/cpp/util/opengl/vao/: CCOpenGLVAO.cpp  CCOpenGLVAO.h
app/src/main/java/com/xuwen/openglengine/: CommonUtils.java  IAApplication.java
app/src/main/java/com/xuwen/openglengine/activity/: Camera3DActivity.java  MainActivity.kt  NativeRenderActivity.kt
app/src/main/java/com/xuwen/openglengine/adapter/: GLRecyclerAdapter.kt
app/src/main/java/com/xuwen/openglengine/camera/: CCOpenGLCamera.java
app/src/main/java/com/xuwen/openglengine/render/: CCOpenGLRender.java
app/src/main/java/com/xuwen/openglengine/surfaceview/: MyCustomerGLSurfaceView.kt  MyGLSurfaceView.java
app/src/main/java/com/xuwen/openglengine/type/: IMyNativeRendererType.kt
app/src/main/res/layout/: activity_main.xml  camera_activity.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/xuwen/openglengine/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
